# finite-sites

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
crates/finitesites-blob/: Cargo.toml
crates/finitesites-blob/src/: lib.rs
crates/finitesites-engine/: Cargo.toml
crates/finitesites-engine/src/: cookie.rs  email.rs  lib.rs  tests.rs
crates/finitesites-proto/: Cargo.toml
crates/finitesites-proto/src/: dto.rs  event.rs  hex.rs  ids.rs  lib.rs  limits.rs  manifest.rs  names.rs  nip98.rs  npub.rs  project_config.rs
crates/finitesites-store/: Cargo.toml
crates/finitesites-store/src/: lib.rs  schema.rs
crates/finitesitesd/: Cargo.toml
crates/finitesitesd/src/: api.rs  apps.rs  content_type.rs  git.rs  lib.rs  limiter.rs  llms.rs  mailer.rs  main.rs  pages.rs  proxy.rs  server.rs  sites.rs
crates/finitesitesd/tests/: e2e.rs
crates/fsite-cli/: Cargo.toml
crates/fsite-cli/src/: api.rs  bundle.rs  keys.rs  main.rs  source.rs  walk.rs
deploy/finite-lat-2/: 50-finite-sites.rules  Caddyfile-sites  finite-app@.service  finite-saas-sites-kata.conf  finite-saas-sites.service  finite-sites-nerdctl-sudoers  sites.env.example
docs/: deploy-finite-lat-2.md  engineering-style.md  finitecomputer-published-sites-audit-results-2026-06-09.jsonl  finitecomputer-published-sites-audit-results-2026-06-09.md  finitecomputer-published-sites-audit.md  native-viewer-auth.md  roadmap.md  technical-debt-ledger.md
docs/adr/: 0001-serve-sites-from-finite-owned-storage-not-nsite.md  0002-authenticate-mutations-with-nip98.md  0003-per-site-workspace-keys-registered-by-user-key.md  0004-publish-immutable-versions-with-latest-pointer.md  0005-claim-before-upload.md  0006-private-by-default-google-doc-sharing.md  0007-content-addressed-blobs-with-global-dedup.md  0008-magic-link-auth-with-host-scoped-cookies.md  0009-operator-allowlist-instead-of-billing.md  0010-sqlite-registry-single-process.md  0011-tiered-hosting-roadmap.md  0012-cloudflare-proxied-edge-with-origin-ca.md  0013-opt-in-spa-fallback-per-version.md  0014-tier2-apps-systemd-sandbox-v0.md  0015-kata-microvms-with-wake-on-request.md  0016-core-synced-publish-grants.md  0017-email-editors-with-source-snapshots.md  0018-generated-llms-agent-handoff.md  0019-project-repositories-with-git-remotes.md  0020-native-viewer-auth-with-principal-cookies.md
docs/feature-requests/: email-keyed-publishing-and-multi-editor.md
examples/: README.md
examples/fasthtml-demo/: app.py
examples/finitechat-native-mockup/: finite.toml  index.html
examples/hello-site/: 404.html  index.html
examples/hello-site/css/: style.css
examples/nextjs-demo/: .gitignore  next.config.ts  package.json  pnpm-lock.yaml
examples/nextjs-demo/app/: layout.tsx  page.tsx
examples/nextjs-demo/app/api/hello/: route.ts
examples/project-applies/: finitechat-native-mockup.json
examples/react-bun-spa/: index.html  package.json
examples/react-bun-spa/src/: main.tsx
examples/spa-pushstate/: index.html
examples/spa-pushstate/assets/: router.js
skills/finite-sites-publishing/: SKILL.md
