[package]
name = "finitesites-blob"
version = "0.2.4"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
finitesites-proto = { path = "../finitesites-proto" }
sha2 = { workspace = true }
thiserror = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
