[package]
name = "finitesites-engine"
version = "0.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
finitesites-proto = { path = "../finitesites-proto" }
finitesites-blob = { path = "../finitesites-blob" }
finitesites-store = { path = "../finitesites-store" }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
