[package]
name = "finitesites-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
secp256k1 = { workspace = true }
base64 = { workspace = true }
bech32 = { workspace = true }
getrandom = { workspace = true }
