[package]
name = "fsite-cli"
version = "0.2.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "fsite"
path = "src/main.rs"

[dependencies]
finitesites-proto = { path = "../finitesites-proto" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
time = { workspace = true }
ureq = { workspace = true }
tar = { workspace = true }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
